// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`internal-config-get-and-set (SHORT) config get operations 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
LPAR1.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
LPAR1.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
LPAR_2.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 4`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
LPAR_2.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 5`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
LPAR_2.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 6`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
lpar_3.example.com"
`;

exports[`internal-config-get-and-set (SHORT) config get operations 7`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
{
  "parmlibMembers": {
    "zis": "ZWESIP00"
  },
  "prefix": "TEST.DATASET.PFX",
  "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
  "parmlib": "TEST.DATASET.PFX.PARMLIB",
  "jcllib": "TEST.DATASET.PFX.JCLLIB",
  "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
  "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
  "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
}"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 1`] = `
"- update zowe config /test/dir/zowe.test.yaml, key: "haInstances.lpar2.hostname" with value: new-lpar2.example.com
  * Success
Error: Validation of update to zowe-server-base found invalid JSON Schema data
Validity Exceptions(s) with object at
  Validity Exceptions(s) with object at /haInstances
    Validity Exceptions(s) with object at /haInstances/lpar2
      missing required property 'sysname' at '/haInstances/lpar2'"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 2`] = `
"zowe:
  setup:
    jcl:
      enable: true
      header: ""
    dataset:
      prefix: TEST.DATASET.PFX
      proclib: TEST.DATASET.PFX.TEST.PROCLIB
      parmlib: TEST.DATASET.PFX.PARMLIB
      parmlibMembers:
        zis: ZWESIP00
      jcllib: TEST.DATASET.PFX.JCLLIB
      loadlib: TEST.DATASET.PFX.SZWEEXEC
      authLoadlib: TEST.DATASET.PFX.SZWEAUTH
      authPluginLib: TEST.DATASET.PFX.ZWESAPL
    certificate:
      type: PKCS12
      pkcs12:
        directory: /test/dir/pkcs12
    vsam:
      mode: NONRLS
      volume: TSTVOL
      storageClass: ""
      name: TEST.DATASET.PFX.VSAM
  runtimeDirectory: /test/dir
  logDirectory: /test/dir/logs
  workspaceDirectory: /test/dir/workspace
  extensionDirectory: /global/zowe/extensions
  configmgr:
    validation: STRICT
  job:
    name: ZWE1SV
    prefix: ZWE1
  rbacProfileIdentifier: "1"
  cookieIdentifier: "1"
  externalDomains:
    - example.com
  externalPort: 7554
  network:
    server:
      tls:
        attls: false
        minTls: TLSv1.2
        maxTls: TLSv1.3
    client:
      tls:
        attls: false
  sysMessageTrim: false
  sysMessages:
    - ZWEL0021I
    - ZWEL0018I
    - ZWEL0006I
    - ZWES1601I
    - ZWEL0008I
    - ZWEL0022I
    - ZWEL0001I
    - ZWEL0002I
    - ZWEAM000I
    - ZWED0031I
    - ZWES1013I
  launchScript:
    logLevel: info
    onComponentConfigureFail: warn
  certificate:
    keystore:
      type: PKCS12
      file: /global/zowe/keystore/localhost/localhost.keystore.p12
      password: password
      alias: localhost
    truststore:
      type: PKCS12
      file: /global/zowe/keystore/localhost/localhost.truststore.p12
      password: password
    pem:
      key: /global/zowe/keystore/localhost/localhost.key
      certificate: /global/zowe/keystore/localhost/localhost.cer
      certificateAuthorities: /global/zowe/keystore/local_ca/local_ca.cer
  verifyCertificates: STRICT
java:
  home: /test/java/home
zOSMF:
  host: some.test.hostname
  port: 12321
  applId: IZUDFLT
components:
  apiml:
    enabled: true
    debug: false
  gateway:
    enabled: true
    port: 7554
    debug: false
    apiml:
      security:
        auth:
          provider: saf
        authorization:
          endpoint:
            enabled: false
          provider: native
        x509:
          enabled: false
  zaas:
    enabled: true
    port: 7558
    debug: false
  api-catalog:
    enabled: true
    port: 7552
    debug: false
  discovery:
    enabled: true
    port: 7553
    debug: false
  caching-service:
    enabled: true
    port: 7555
    debug: false
    storage:
      evictionStrategy: reject
      mode: infinispan
      infinispan:
        jgroups:
          port: 7600
          keyExchange:
            port: 7601
  app-server:
    enabled: true
    port: 7556
    debug: false
  zss:
    enabled: true
    port: 7557
    crossMemoryServerName: ZWESIS_STD
    agent:
      64bit: true
  explorer-jes:
    enabled: true
  explorer-mvs:
    enabled: true
  explorer-uss:
    enabled: true
haInstances:
  LPAR1:
    hostname: LPAR1.example.com
    sysname: LPAR1
  lpar1:
    hostname: lpar1.example.com
    sysname: lpar1
  LPAR-2:
    hostname: LPAR-2.example.com
    sysname: LPAR-2
  LPAR_2:
    hostname: LPAR_2.example.com
    sysname: LPAR_2
  LPAR-3:
    hostname: LPAR-3.example.com
    sysname: LPAR-3
  lpar_3:
    hostname: lpar_3.example.com
    sysname: lpar_3
"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 3`] = `
"- update zowe config /test/dir/zowe.test.yaml, key: ".zowe.setup.jcl.header" with value: 123456
  * Success"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 4`] = `
"---
zowe:
  setup:
    jcl:
      enable: true
      header: "123456"
    dataset:
      prefix: "TEST.DATASET.PFX"
      proclib: "TEST.DATASET.PFX.TEST.PROCLIB"
      parmlib: "TEST.DATASET.PFX.PARMLIB"
      parmlibMembers:
        zis: "ZWESIP00"
      jcllib: "TEST.DATASET.PFX.JCLLIB"
      loadlib: "TEST.DATASET.PFX.SZWEEXEC"
      authLoadlib: "TEST.DATASET.PFX.SZWEAUTH"
      authPluginLib: "TEST.DATASET.PFX.ZWESAPL"
    certificate:
      type: "PKCS12"
      pkcs12:
        directory: "/test/dir/pkcs12"
    vsam:
      mode: "NONRLS"
      volume: "TSTVOL"
      storageClass: ""
      name: "TEST.DATASET.PFX.VSAM"
  runtimeDirectory: "/test/dir"
  logDirectory: "/test/dir/logs"
  workspaceDirectory: "/test/dir/workspace"
  extensionDirectory: "/global/zowe/extensions"
  configmgr:
    validation: "STRICT"
  job:
    name: "ZWE1SV"
    prefix: "ZWE1"
  rbacProfileIdentifier: "1"
  cookieIdentifier: "1"
  externalDomains:
  - "example.com"
  externalPort: 7554
  network:
    server:
      tls:
        attls: false
        minTls: "TLSv1.2"
        maxTls: "TLSv1.3"
    client:
      tls:
        attls: false
  sysMessageTrim: false
  sysMessages:
  - "ZWEL0021I"
  - "ZWEL0018I"
  - "ZWEL0006I"
  - "ZWES1601I"
  - "ZWEL0008I"
  - "ZWEL0022I"
  - "ZWEL0001I"
  - "ZWEL0002I"
  - "ZWEAM000I"
  - "ZWED0031I"
  - "ZWES1013I"
  launchScript:
    logLevel: "info"
    onComponentConfigureFail: "warn"
  certificate:
    keystore:
      type: "PKCS12"
      file: "/global/zowe/keystore/localhost/localhost.keystore.p12"
      password: "password"
      alias: "localhost"
    truststore:
      type: "PKCS12"
      file: "/global/zowe/keystore/localhost/localhost.truststore.p12"
      password: "password"
    pem:
      key: "/global/zowe/keystore/localhost/localhost.key"
      certificate: "/global/zowe/keystore/localhost/localhost.cer"
      certificateAuthorities: "/global/zowe/keystore/local_ca/local_ca.cer"
  verifyCertificates: "STRICT"
java:
  home: "/test/java/home"
zOSMF:
  host: "some.test.hostname"
  port: 12321
  applId: "IZUDFLT"
components:
  apiml:
    enabled: true
    debug: false
  gateway:
    enabled: true
    port: 7554
    debug: false
    apiml:
      security:
        auth:
          provider: "saf"
        authorization:
          endpoint:
            enabled: false
          provider: "native"
        x509:
          enabled: false
  zaas:
    enabled: true
    port: 7558
    debug: false
  api-catalog:
    enabled: true
    port: 7552
    debug: false
  discovery:
    enabled: true
    port: 7553
    debug: false
  caching-service:
    enabled: true
    port: 7555
    debug: false
    storage:
      evictionStrategy: "reject"
      mode: "infinispan"
      infinispan:
        jgroups:
          port: 7600
          keyExchange:
            port: 7601
  app-server:
    enabled: true
    port: 7556
    debug: false
  zss:
    enabled: true
    port: 7557
    crossMemoryServerName: "ZWESIS_STD"
    agent:
      64bit: true
  explorer-jes:
    enabled: true
  explorer-mvs:
    enabled: true
  explorer-uss:
    enabled: true
haInstances:
  LPAR1:
    hostname: "LPAR1.example.com"
    sysname: "LPAR1"
  lpar1:
    hostname: "lpar1.example.com"
    sysname: "lpar1"
  LPAR-2:
    hostname: "LPAR-2.example.com"
    sysname: "LPAR-2"
  LPAR_2:
    hostname: "LPAR_2.example.com"
    sysname: "LPAR_2"
  LPAR-3:
    hostname: "LPAR-3.example.com"
    sysname: "LPAR-3"
  lpar_3:
    hostname: "lpar_3.example.com"
    sysname: "lpar_3"
...
"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 5`] = `
"- update zowe config /test/dir/zowe.test.yaml, key: "haInstances.LPAR1.hostname" with value: new-lpar.example.com
  * Success"
`;

exports[`internal-config-get-and-set (SHORT) config set operations 6`] = `
"---
zowe:
  setup:
    jcl:
      enable: true
      header: ""
    dataset:
      prefix: "TEST.DATASET.PFX"
      proclib: "TEST.DATASET.PFX.TEST.PROCLIB"
      parmlib: "TEST.DATASET.PFX.PARMLIB"
      parmlibMembers:
        zis: "ZWESIP00"
      jcllib: "TEST.DATASET.PFX.JCLLIB"
      loadlib: "TEST.DATASET.PFX.SZWEEXEC"
      authLoadlib: "TEST.DATASET.PFX.SZWEAUTH"
      authPluginLib: "TEST.DATASET.PFX.ZWESAPL"
    certificate:
      type: "PKCS12"
      pkcs12:
        directory: "/test/dir/pkcs12"
    vsam:
      mode: "NONRLS"
      volume: "TSTVOL"
      storageClass: ""
      name: "TEST.DATASET.PFX.VSAM"
  runtimeDirectory: "/test/dir"
  logDirectory: "/test/dir/logs"
  workspaceDirectory: "/test/dir/workspace"
  extensionDirectory: "/global/zowe/extensions"
  configmgr:
    validation: "STRICT"
  job:
    name: "ZWE1SV"
    prefix: "ZWE1"
  rbacProfileIdentifier: "1"
  cookieIdentifier: "1"
  externalDomains:
  - "example.com"
  externalPort: 7554
  network:
    server:
      tls:
        attls: false
        minTls: "TLSv1.2"
        maxTls: "TLSv1.3"
    client:
      tls:
        attls: false
  sysMessageTrim: false
  sysMessages:
  - "ZWEL0021I"
  - "ZWEL0018I"
  - "ZWEL0006I"
  - "ZWES1601I"
  - "ZWEL0008I"
  - "ZWEL0022I"
  - "ZWEL0001I"
  - "ZWEL0002I"
  - "ZWEAM000I"
  - "ZWED0031I"
  - "ZWES1013I"
  launchScript:
    logLevel: "info"
    onComponentConfigureFail: "warn"
  certificate:
    keystore:
      type: "PKCS12"
      file: "/global/zowe/keystore/localhost/localhost.keystore.p12"
      password: "password"
      alias: "localhost"
    truststore:
      type: "PKCS12"
      file: "/global/zowe/keystore/localhost/localhost.truststore.p12"
      password: "password"
    pem:
      key: "/global/zowe/keystore/localhost/localhost.key"
      certificate: "/global/zowe/keystore/localhost/localhost.cer"
      certificateAuthorities: "/global/zowe/keystore/local_ca/local_ca.cer"
  verifyCertificates: "STRICT"
java:
  home: "/test/java/home"
zOSMF:
  host: "some.test.hostname"
  port: 12321
  applId: "IZUDFLT"
components:
  apiml:
    enabled: true
    debug: false
  gateway:
    enabled: true
    port: 7554
    debug: false
    apiml:
      security:
        auth:
          provider: "saf"
        authorization:
          endpoint:
            enabled: false
          provider: "native"
        x509:
          enabled: false
  zaas:
    enabled: true
    port: 7558
    debug: false
  api-catalog:
    enabled: true
    port: 7552
    debug: false
  discovery:
    enabled: true
    port: 7553
    debug: false
  caching-service:
    enabled: true
    port: 7555
    debug: false
    storage:
      evictionStrategy: "reject"
      mode: "infinispan"
      infinispan:
        jgroups:
          port: 7600
          keyExchange:
            port: 7601
  app-server:
    enabled: true
    port: 7556
    debug: false
  zss:
    enabled: true
    port: 7557
    crossMemoryServerName: "ZWESIS_STD"
    agent:
      64bit: true
  explorer-jes:
    enabled: true
  explorer-mvs:
    enabled: true
  explorer-uss:
    enabled: true
haInstances:
  LPAR1:
    hostname: "new-lpar.example.com"
    sysname: "LPAR1"
  lpar1:
    hostname: "lpar1.example.com"
    sysname: "lpar1"
  LPAR-2:
    hostname: "LPAR-2.example.com"
    sysname: "LPAR-2"
  LPAR_2:
    hostname: "LPAR_2.example.com"
    sysname: "LPAR_2"
  LPAR-3:
    hostname: "LPAR-3.example.com"
    sysname: "LPAR-3"
  lpar_3:
    hostname: "lpar_3.example.com"
    sysname: "lpar_3"
...
"
`;
